Change sizes of link icons to use px instead of em to prevent occasional clipping

--- a/core/src/scss/components/link/_link--internal.scss
+++ b/core/src/scss/components/link/_link--internal.scss
@@ -7,7 +7,7 @@
 // @see scss/utilities/mixins/link/_link-icon.scss
 //
 .su-link--internal {
-  @include link-icon(lock, 0.75em, none, -0.06em);
+  @include link-icon(lock, 13px, none, -0.03em);
 
   &:hover,
   &:focus {
