--- a/core/src/scss/components/link/_link--jump.scss
+++ b/core/src/scss/components/link/_link--jump.scss
@@ -7,5 +7,5 @@
 // @see scss/utilities/mixins/link/_link-icon.scss
 //
 .su-link--jump {
-  @include link-icon(caret-down, 0.65em, down, -0.04em);
+  @include link-icon(caret-down, 12px, down);
 }
